# cdsp

./: .gitignore  Makefile  Package.swift  README.md  callgraph_audit_report.md  cross_build.sh  dsp_engine_public_api_alignment.md  engine_state_management.md  main.c
Audio/: audio_buffers.c  audio_buffers.h  audio_chunk.c  audio_chunk.h  audio_history_buffer.c  audio_history_buffer.h  double_helpers.c  double_helpers.h  float_helpers.h  lock_free_ring_buffer.c  lock_free_ring_buffer.h  processing_parameters.c  processing_parameters.h  sample_conversion.h  silence_counter.c  silence_counter.h  spectrum_analyzer.c  spectrum_analyzer.h
Backend/: alsa_capabilities.c  alsa_capabilities.h  alsa_capture.c  alsa_capture.h  alsa_device.c  alsa_device.h  alsa_playback.c  alsa_playback.h  asio_backend.c  asio_backend.h  asio_capabilities.c  asio_capabilities.h  audio_backend.c  audio_backend.h  audio_backend_factory.c  audio_backend_factory.h  audio_backend_registry.c  audio_backend_registry.h  backend_error.c  backend_error.h  bluez_backend.c  bluez_backend.h  core_audio_capabilities.c  core_audio_capabilities.h  core_audio_capture.c  core_audio_capture.h  core_audio_device.c  core_audio_device.h  core_audio_playback.c  core_audio_playback.h  file_backend.c  file_backend.h  generator_capture.c  generator_capture.h  jack_backend.c  jack_backend.h  pipewire_backend.c  pipewire_backend.h  pulse_backend.c  pulse_backend.h  (+10 more)
Config/: cJSON.c  cJSON.h  cdsp_yaml.c  cdsp_yaml.h  config_diff.c  config_diff.h  config_error.c  config_error.h  config_parse_devices.c  config_parse_devices.h  config_parse_filters.c  config_parse_filters.h  config_parse_mixers.c  config_parse_mixers.h  (+18 more)
Tests/RustHarnesses/cdsp_filter_compare/: Cargo.toml
Tests/RustHarnesses/cdsp_filter_compare/src/: main.rs
Tests/RustHarnesses/cdsp_resampler_compare/: Cargo.toml
Tests/RustHarnesses/cdsp_resampler_compare/src/: main.rs
(+216 files in other folders)
