[package]
name = "cdsp_filter_compare"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Pinned to a specific upstream camilladsp commit so the filter-comparison
# harness stays reproducible. Cargo resolves the package by its `name`
# (CamillaDSP) but exposes the lib target as `camillalib` per the upstream
# Cargo.toml. Bump the rev when filters are re-validated against a newer cut.
CamillaDSP = { git = "https://github.com/HEnquist/camilladsp.git", rev = "69897c828f6ae873db26d9f88511d5c7a6bb802c" }
serde_json = "1.0"

[[bin]]
name = "cdsp_filter_compare"
path = "src/main.rs"
