[package]
name = "cdsp_filter_compare"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Pinned to a specific upstream camilladsp commit so the filter-comparison
# harness stays reproducible. Cargo resolves the package by its `name`
# (CamillaDSP) but exposes the lib target as `camillalib` per the upstream
# Cargo.toml. Bump the rev when filters are re-validated against a newer cut.
CamillaDSP = { git = "https://github.com/HEnquist/camilladsp.git", rev = "60b6eeff80d937be5f4e0c9bf2d3be4469da4e09" }
serde_json = "1.0"

[[bin]]
name = "cdsp_filter_compare"
path = "src/main.rs"
