[package]
name = "cdsp_resampler_compare"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Pinned to a specific upstream rubato commit so the harness's bit-equivalent
# results stay reproducible. Bump the rev when the AsyncSinc/AsyncPoly Swift
# implementations are re-validated against a newer rubato.
rubato = { version = "4.0" }
audioadapter-buffers = "4.0"

[[bin]]
name = "cdsp_resampler_compare"
path = "src/main.rs"
